2007-11-16  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/color.*, libavogadro/src/glpainter.cpp: Added a new
	OpenGL material that should work better with the ring engine.

2007-11-13  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/engines/ribbonengine.*: Updated so that we now have
	multiple chain colours!

	* libavogadro/src/engines/ringengine.*,
	libavogadro/src/engines/CMakeLists.txt: Added new ring engine, renders
	ring structures. Transparency is not working yet.

	* libavogadro/src/engines/ringengine.*,
	libavogadro/src/engines/CMakeLists.txt,
	libavogadro/src/engines/ringsettingswidget.ui: Added opacity slider,
	transparency now working.

2007-11-11  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/painterdevice.h, libavogadro/src/povpainter.h,
	libavogadro/src/glwidget.cpp: Exposed the loaded Molecule to the
	PainterDevice.

	* libavogadro/src/painter.h, libavogadro/src/povpainter.h,
	libavogadro/src/glpainter.h: Added the drawTriangle function.

2007-11-10  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* avogadro/src/mainwindow.cpp (copy, exportGraphics): Embed MDL
	molfile and SMILES data in exported graphics. Should allow PNG
	files to be read back in via Open Babel 2.2.

2007-11-06  Marcus D. Hanwell <marcus@cryos.org>
	* avogadro/libavogadro/src/engines/ribbonengine.*: Added ability to
	set the ribbon radius, also tried to add transparency - not working
	for me here.

	* libavogadro/src/glpainter.cpp: Added some extra calculations so that
	the tube shouldn't be flattened and also has a defined radius. More
	tuning has really improved the render speed - thanks to Thomas Margraf
	for providing an example which inspired what I did here.

2007-11-05  Marcus D. Hanwell <marcus@cryos.org>
	* libavogadro/src/glpainter.cpp: Now filled with NURBS goodness.
	Still needs quite a bit of tuning and testing but visually improved.
  
	* libavogadro/src/engines/ribbonengine.cpp: Modifications to work
	with the new GLPainter.
