@@ -9,70 +9,94 @@
     <height>300</height>
    </rect>
   </property>
-  <layout class="QGridLayout" >
-   <property name="margin" >
-    <number>9</number>
-   </property>
-   <property name="spacing" >
-    <number>10</number>
-   </property>
-   <item row="0" column="1" >
-    <widget class="QSlider" name="atomRadiusSlider" >
-     <property name="minimum" >
-      <number>1</number>
-     </property>
-     <property name="maximum" >
-      <number>13</number>
-     </property>
-     <property name="pageStep" >
-      <number>2</number>
-     </property>
-     <property name="value" >
-      <number>3</number>
-     </property>
-     <property name="orientation" >
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="tickPosition" >
-      <enum>QSlider::TicksBothSides</enum>
-     </property>
-    </widget>
+  <layout class="QVBoxLayout" >
+   <item>
+    <layout class="QGridLayout" >
+     <item row="0" column="0" >
+      <widget class="QLabel" name="atomRadiusLabel" >
+       <property name="text" >
+        <string>Atom Radius:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1" >
+      <widget class="QSlider" name="atomRadiusSlider" >
+       <property name="minimum" >
+        <number>1</number>
+       </property>
+       <property name="maximum" >
+        <number>13</number>
+       </property>
+       <property name="pageStep" >
+        <number>2</number>
+       </property>
+       <property name="value" >
+        <number>3</number>
+       </property>
+       <property name="orientation" >
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="tickPosition" >
+        <enum>QSlider::TicksBothSides</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0" >
+      <widget class="QLabel" name="bondRadiusLabel" >
+       <property name="text" >
+        <string>Bond Radius:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1" >
+      <widget class="QSlider" name="bondRadiusSlider" >
+       <property name="minimum" >
+        <number>1</number>
+       </property>
+       <property name="maximum" >
+        <number>3</number>
+       </property>
+       <property name="pageStep" >
+        <number>1</number>
+       </property>
+       <property name="value" >
+        <number>1</number>
+       </property>
+       <property name="orientation" >
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="tickPosition" >
+        <enum>QSlider::TicksBothSides</enum>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
-   <item row="0" column="0" >
-    <widget class="QLabel" name="atomRadiusLabel" >
+   <item>
+    <widget class="QCheckBox" name="showMulti" >
      <property name="text" >
-      <string>Atom Radius:</string>
+      <string>Show Multiple Bonds</string>
+     </property>
+     <property name="checked" >
+      <bool>true</bool>
+     </property>
+     <property name="tristate" >
+      <bool>false</bool>
      </property>
     </widget>
    </item>
-   <item row="1" column="0" >
-    <widget class="QLabel" name="bondRadiusLabel" >
-     <property name="text" >
-      <string>Bond Radius</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="1" >
-    <widget class="QSlider" name="bondRadiusSlider" >
-     <property name="minimum" >
-      <number>1</number>
-     </property>
-     <property name="maximum" >
-      <number>3</number>
-     </property>
-     <property name="pageStep" >
-      <number>1</number>
-     </property>
-     <property name="value" >
-      <number>1</number>
-     </property>
+   <item>
+    <spacer>
      <property name="orientation" >
-      <enum>Qt::Horizontal</enum>
+      <enum>Qt::Vertical</enum>
      </property>
-     <property name="tickPosition" >
-      <enum>QSlider::TicksBothSides</enum>
+     <property name="sizeHint" >
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
      </property>
-    </widget>
+    </spacer>
    </item>
   </layout>
  </widget>
