@@ -2,6 +2,10 @@
 	* libavogadro/src/color.*, libavogadro/src/glpainter.cpp: Added a new
 	OpenGL material that should work better with the ring engine.
 
+	* libavogadro/src/engines/bsdyengine.*,
+	libavogadro/src/engines/bsdysettingswidget.ui: Added check box to show
+	higher order bonds or not.
+
 2007-11-13  Marcus D. Hanwell <marcus@cryos.org>
 	* libavogadro/src/engines/ribbonengine.*: Updated so that we now have
 	multiple chain colours!
